Prom+Grafana_in_k8s/k8s_master/prometheus/manifests/prometheusdeployment.yaml

---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  annotations:
    configmap.reloader.stakater.com/reload: "prometheus-configmap,prometheus-configmap-alerts"
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 -v convert
    kompose.version: 1.21.0 (992df58d8)
  name: prometheus
  labels:
    allow.http: "false"
    application: prometheus
spec:
  replicas: 3
  serviceName: prometheus-service
  selector:
    matchLabels:
      application: prometheus
  template:
    metadata:
      labels:
        application: prometheus
    spec:
      containers:
      - args:
        - --config.file=/etc/prometheus/prometheus.yml
        - --storage.tsdb.path=/prometheus
        - --web.console.libraries=/usr/share/prometheus/console_libraries
        - --web.console.templates=/usr/share/prometheus/consoles
        - --storage.tsdb.no-lockfile
        image: prom/prometheus:v2.26.0
        name: prometheus
        volumeMounts:
        - name: prometheus-storage
          mountPath: /prometheus/
        - name: prometheus-config-shared
          mountPath: /etc/prometheus-shared/
        - name: prometheus-configmap-alerts
          mountPath: /etc/prometheus/rules
      restartPolicy: Always
      volumes:
      - name: prometheus-config
        configMap:
          defaultMode: 420
          name: prometheus-configmap
      - name: prometheus-config-shared
        emptyDir: {}
      - name: prometheus-configmap-alerts
        configMap:
          name: prometheus-configmap-alerts
      securityContext:
        fsGroup: 2000
        runAsNonRoot: true
        runAsUser: 1000
  volumeClaimTemplates:
  - metadata:
      name: prometheus-storage
      namespace: default
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: longhorn
      resources:
        requests:
          storage: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  type: ClusterIP
  ports:
  - port: 80 # Porta a ser exposta pelo SERVICE
    targetPort: 9090 # Porta que a aplicação está rodando no POD
  selector:
    application: prometheus


---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: prometheus
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  rules:
    - host: prometheus.rancher.devopsgiz33.cf
      http:
        paths:
          - backend:
              serviceName: prometheus
              servicePort: 80
